Fix nav centering and hero content spacing
The nav now fits into the center of the screen and the edges line up
with the edges of the content.

Some key things used here are min-width in the css and
justify-content: space-between;

I also organized the style file so it's a mess of commits

--- a/style.css
+++ b/style.css
@@ -8,48 +8,14 @@ body {
   align-items: stretch;
 }
 
-.hero {
-  background-color: #1f2937;
-  color: #e5e7eb;
-  font-size: 18px;
-}
 
-.hero ul{
-  display: flex;
-  list-style-type:none;
-  margin: 0;
-  padding: 0;
-  flex: 0;
-}
-
-.hero ul .logo{
-  margin-right: auto;
-}
-
-
-.hero ul{
-  display: flex;
-  list-style-type:none;
-  margin: 0;
-  padding: 0;
-  flex: 0;
-}
-
-.hero h1 {
-  font-size: 48px;
-  font-weight: 1000;
-  color: #f9faf8;
-  margin: 16px 0;
-}
 
 .flex {
   display:flex;
-  justify-content:center;
 }
 
-
 .content {
-  max-width: 1000px;
+  min-width: 1000px;
   gap: 64px;
   margin: 150px 0;
 }
@@ -57,4 +23,48 @@ body {
 .placeholder {
   padding: 16px;
   background-color: #e5e7eb;
+}
+
+.hero {
+  background-color: #1f2937;
+  color: #e5e7eb;
+  font-size: 18px;
+  flex-direction: column;
+  align-items:center;
+}
+
+.hero ul{
+  display: flex;
+  list-style-type:none;
+  margin: 0;
+  padding: 0;
+  flex: 0;
+}
+
+nav {
+  min-width: 1000px;
+}
+
+nav .logo {
+  margin-right: auto;
+}
+
+
+nav ul{
+  display: flex;
+  list-style-type:none;
+  margin: 0;
+  padding: 0;
+  flex: 0;
+}
+
+.hero .content{
+  justify-content: space-between;
+}
+
+.hero h1 {
+  font-size: 48px;
+  font-weight: 1000;
+  color: #f9faf8;
+  margin: 16px 0;
 }
